JavaFX frontend update